Add power 2 averaging

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,10 +6,7 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- decrease submit threshold\n",
-    "- if new folds work good - add them to ensemble\n",
     "- power averaging\n",
-    "- cutmix with prob=0.5 works great for fold_1, check it for all good folds\n",
     "\n",
     "- try with full data\n",
     "- try with 6, 7, 8 folds\n",
@@ -68,6 +65,7 @@
    ],
    "source": [
     "import json\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from hydra import initialize, compose\n",
