Add power 4 averaging

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -1,12 +1,350 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event</th>\n",
+       "      <th>onset</th>\n",
+       "      <th>wakeup</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>series_id</th>\n",
+       "      <th>night</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">038441c925bb</th>\n",
+       "      <th>1</th>\n",
+       "      <td>4992.0</td>\n",
+       "      <td>10932.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20244.0</td>\n",
+       "      <td>27492.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>39996.0</td>\n",
+       "      <td>44400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57240.0</td>\n",
+       "      <td>62856.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>91296.0</td>\n",
+       "      <td>97860.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">fe90110788d2</th>\n",
+       "      <th>30</th>\n",
+       "      <td>505116.0</td>\n",
+       "      <td>511284.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>522852.0</td>\n",
+       "      <td>529104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>538956.0</td>\n",
+       "      <td>547152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>556560.0</td>\n",
+       "      <td>560604.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>574620.0</td>\n",
+       "      <td>581604.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4790 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "event                  onset    wakeup\n",
+       "series_id    night                    \n",
+       "038441c925bb 1        4992.0   10932.0\n",
+       "             2       20244.0   27492.0\n",
+       "             3       39996.0   44400.0\n",
+       "             4       57240.0   62856.0\n",
+       "             6       91296.0   97860.0\n",
+       "...                      ...       ...\n",
+       "fe90110788d2 30     505116.0  511284.0\n",
+       "             31     522852.0  529104.0\n",
+       "             32     538956.0  547152.0\n",
+       "             33     556560.0  560604.0\n",
+       "             34     574620.0  581604.0\n",
+       "\n",
+       "[4790 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import polars as pl\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from torchvision.transforms.functional import resize\n",
+    "\n",
+    "from src.conf import InferenceConfig, TrainConfig\n",
+    "from src.utils.common import (gaussian_label, nearest_valid_size,\n",
+    "                              negative_sampling, pad_if_needed, random_crop)\n",
+    "\n",
+    "\n",
+    "###################\n",
+    "# Label\n",
+    "###################\n",
+    "def get_seg_label(\n",
+    "    this_event_df: pd.DataFrame, num_frames: int, duration: int, start: int, end: int\n",
+    ") -> np.ndarray:\n",
+    "    # # (start, end)の範囲と(onset, wakeup)の範囲が重なるものを取得\n",
+    "    this_event_df = this_event_df.query(\"@start <= wakeup & onset <= @end\")\n",
+    "\n",
+    "    label = np.zeros((num_frames, 3))\n",
+    "    # onset, wakeup, sleepのラベルを作成\n",
+    "    for onset, wakeup in this_event_df[[\"onset\", \"wakeup\"]].to_numpy():\n",
+    "        onset = int((onset - start) / duration * num_frames)\n",
+    "        wakeup = int((wakeup - start) / duration * num_frames)\n",
+    "        if onset >= 0 and onset < num_frames:\n",
+    "            label[onset, 1] = 1\n",
+    "        if wakeup < num_frames and wakeup >= 0:\n",
+    "            label[wakeup, 2] = 1\n",
+    "\n",
+    "        onset = max(0, onset)\n",
+    "        wakeup = min(num_frames, wakeup)\n",
+    "        label[onset:wakeup, 0] = 1  # sleep\n",
+    "\n",
+    "    return label\n",
+    "\n",
+    "\n",
+    "class SegTrainDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        cfg: TrainConfig,\n",
+    "        features: dict[str, np.ndarray],\n",
+    "        event_df: pl.DataFrame,\n",
+    "    ):\n",
+    "        self.cfg = cfg\n",
+    "        # only positive samples\n",
+    "        self.event_df_pos: pd.DataFrame = (\n",
+    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
+    "            .drop_nulls()\n",
+    "            .to_pandas()\n",
+    "        )\n",
+    "        # all samples\n",
+    "        self.event_df: pd.DataFrame = (\n",
+    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
+    "            .to_pandas()\n",
+    "        )\n",
+    "        self.features = features\n",
+    "        self.num_features = len(cfg.features)\n",
+    "        self.upsampled_num_frames = nearest_valid_size(\n",
+    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
+    "        )\n",
+    "        self.max_steps = {'05e1944c3818': 139992, '13b4d6a01d27': 92484, \n",
+    "                          '7476c0bd18d2': 83988, '5aad18e7ce64': 18216,\n",
+    "                          'aed3850f65f0': 21228, 'c5365a55ebb7': 17772, \n",
+    "                          'f981a0805fd0': 75192}\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.event_df)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        event = np.random.choice([\"onset\", \"wakeup\"], p=[0.5, 0.5])\n",
+    "        pos = self.event_df.at[idx, event]\n",
+    "        \n",
+    "        positive = False if random.random() < self.cfg.dataset.bg_sampling_rate else True\n",
+    "        if positive:\n",
+    "            idx = idx % len(self.event_df_pos)    \n",
+    "            series_id = self.event_df_pos.at[idx, \"series_id\"]\n",
+    "            this_event_df = self.event_df_pos.query(\"series_id == @series_id\").reset_index(drop=True)\n",
+    "        else:\n",
+    "            series_id = self.event_df.at[idx, \"series_id\"]\n",
+    "            this_event_df = self.event_df.query(\"series_id == @series_id\").reset_index(drop=True)\n",
+    "        \n",
+    "        # extract data matching series_id\n",
+    "        this_feature = self.features[series_id]  # (n_steps, num_features)\n",
+    "        n_steps = this_feature.shape[0]\n",
+    "\n",
+    "        # sample background\n",
+    "        if positive:\n",
+    "            max_step = self.max_steps[series_id] if series_id in self.max_steps else 1e9\n",
+    "            pos = negative_sampling(this_event_df, n_steps, max_step, self.cfg.duration)\n",
+    "\n",
+    "        # crop\n",
+    "        if n_steps > self.cfg.duration:\n",
+    "            start, end = random_crop(pos, self.cfg.duration, n_steps)\n",
+    "            feature = this_feature[start:end]\n",
+    "        else:\n",
+    "            start, end = 0, self.cfg.duration\n",
+    "            feature = pad_if_needed(this_feature, self.cfg.duration)\n",
+    "\n",
+    "        # upsample\n",
+    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
+    "        feature = resize(\n",
+    "            feature,\n",
+    "            size=[self.num_features, self.upsampled_num_frames],\n",
+    "            antialias=False,\n",
+    "        ).squeeze(0)\n",
+    "\n",
+    "        # from hard label to gaussian label\n",
+    "        num_frames = self.upsampled_num_frames // self.cfg.downsample_rate\n",
+    "        label = get_seg_label(this_event_df, num_frames, self.cfg.duration, start, end)\n",
+    "        \n",
+    "        # label[:, 0] = add_gaussian_sleep(label[:, 0], offset=self.cfg.dataset.offset)\n",
+    "        label[:, [1, 2]] = gaussian_label(\n",
+    "            label[:, [1, 2]], offset=self.cfg.dataset.offset, sigma=self.cfg.dataset.sigma\n",
+    "        )\n",
+    "        \n",
+    "        return {\n",
+    "            \"series_id\": series_id,\n",
+    "            \"feature\": feature,  # (num_features, upsampled_num_frames)\n",
+    "            \"label\": torch.FloatTensor(label),  # (pred_length, num_classes)\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "class SegValidDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        cfg: TrainConfig,\n",
+    "        chunk_features: dict[str, np.ndarray],\n",
+    "        event_df: pl.DataFrame,\n",
+    "    ):\n",
+    "        self.cfg = cfg\n",
+    "        self.chunk_features = chunk_features\n",
+    "        self.keys = list(chunk_features.keys())\n",
+    "        self.event_df = (\n",
+    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
+    "            .drop_nulls()\n",
+    "            .to_pandas()\n",
+    "        )\n",
+    "        self.num_features = len(cfg.features)\n",
+    "        self.upsampled_num_frames = nearest_valid_size(\n",
+    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
+    "        )\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.keys)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        key = self.keys[idx]\n",
+    "        feature = self.chunk_features[key]\n",
+    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
+    "        feature = resize(\n",
+    "            feature,\n",
+    "            size=[self.num_features, self.upsampled_num_frames],\n",
+    "            antialias=False,\n",
+    "        ).squeeze(0)\n",
+    "\n",
+    "        series_id, chunk_id = key.split(\"_\")\n",
+    "        chunk_id = int(chunk_id)\n",
+    "        start = chunk_id * self.cfg.duration\n",
+    "        end = start + self.cfg.duration\n",
+    "        num_frames = self.upsampled_num_frames // self.cfg.downsample_rate\n",
+    "        \n",
+    "        label = get_seg_label(\n",
+    "            self.event_df.query(\"series_id == @series_id\").reset_index(drop=True),\n",
+    "            num_frames,\n",
+    "            self.cfg.duration,\n",
+    "            start,\n",
+    "            end,\n",
+    "        )\n",
+    "        \n",
+    "        return {\n",
+    "            \"key\": key,\n",
+    "            \"feature\": feature,  # (batch_size, num_features, duration)\n",
+    "            \"label\": torch.FloatTensor(label),  # (batch_size, duration // 2, num_classes)\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "class SegTestDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        cfg: InferenceConfig,\n",
+    "        chunk_features: dict[str, np.ndarray],\n",
+    "    ):\n",
+    "        self.cfg = cfg\n",
+    "        self.chunk_features = chunk_features\n",
+    "        self.keys = list(chunk_features.keys())\n",
+    "        self.num_features = len(cfg.features)\n",
+    "        self.upsampled_num_frames = nearest_valid_size(\n",
+    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
+    "        )\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.keys)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        key = self.keys[idx]\n",
+    "        feature = self.chunk_features[key]\n",
+    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
+    "        feature = resize(\n",
+    "            feature,\n",
+    "            size=[self.num_features, self.upsampled_num_frames],\n",
+    "            antialias=False,\n",
+    "        ).squeeze(0)\n",
+    "        \n",
+    "        return {\n",
+    "            \"key\": key,\n",
+    "            \"feature\": feature,  # (num_features, duration)\n",
+    "        }\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Ideas\n",
     "\n",
-    "- power averaging\n",
+    "- check  with fixed sampling \n",
     "\n",
     "- try with full data\n",
     "- try with 6, 7, 8 folds\n",
@@ -55,7 +393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1662410/251296522.py:39: UserWarning: \n",
+      "/tmp/ipykernel_1800226/4092731947.py:40: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -84,7 +422,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
+    "INFERENCE = True\n",
     "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
@@ -133,16 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7672724347834871, 54999)"
+       "(0.7945928237902742, 352926)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +495,15 @@
     "score = event_detection_ap(gt_df, pred_df)\n",
     "\n",
     "score, len(pred_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (0.7945928237902742, 352926)"
    ]
   },
   {
@@ -267,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -291,28 +638,22 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):2.0sec] load test dataloader \n",
-      "List of models: ['/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_0.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_2.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_6.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_7.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth']\n",
+      "[5.0GB(+3.9GB):2.2sec] load test dataloader \n",
+      "List of models: ['/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_0.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_2.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth']\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_2.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth\n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_6.pth\n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_7.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth\n",
-      "[6.0GB(+1.0GB):2.7sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.44it/s]\n",
-      "[7.6GB(+1.7GB):97.8sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:24<00:00, 22.15it/s]\n",
-      "[7.7GB(+0.0GB):100.7sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:21<00:00, 22.92it/s]\n",
-      "[7.7GB(+0.0GB):97.8sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:21<00:00, 22.96it/s]\n",
-      "[7.7GB(+0.0GB):97.4sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:16<00:00, 24.52it/s]\n",
-      "[7.7GB(+0.0GB):93.2sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:16<00:00, 24.28it/s]\n",
-      "[7.7GB(+0.0GB):92.4sec] inference \n",
-      "[7.7GB(+0.0GB):1.8sec] make submission \n"
+      "[5.7GB(+0.7GB):4.8sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:38<00:00, 11.80it/s]\n",
+      "[7.4GB(+1.7GB):177.8sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:38<00:00, 11.77it/s]\n",
+      "[7.4GB(+0.0GB):180.0sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:36<00:00, 11.93it/s]\n",
+      "[7.4GB(+0.0GB):176.6sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:36<00:00, 11.89it/s]\n",
+      "[7.4GB(+0.0GB):176.8sec] inference \n",
+      "[7.4GB(+0.0GB):1.0sec] make submission \n"
      ]
     }
    ],
