Return power average with degree 2, fix incorrect sampling

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -25,317 +25,221 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>event</th>\n",
-       "      <th>onset</th>\n",
-       "      <th>wakeup</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>series_id</th>\n",
        "      <th>night</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>onset</th>\n",
+       "      <th>wakeup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">038441c925bb</th>\n",
-       "      <th>1</th>\n",
-       "      <td>4992.0</td>\n",
-       "      <td>10932.0</td>\n",
+       "      <th>1250</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3960.0</td>\n",
+       "      <td>10164.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20244.0</td>\n",
-       "      <td>27492.0</td>\n",
+       "      <th>1251</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21996.0</td>\n",
+       "      <td>27132.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>39996.0</td>\n",
-       "      <td>44400.0</td>\n",
+       "      <th>1252</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>57240.0</td>\n",
-       "      <td>62856.0</td>\n",
+       "      <th>1253</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>91296.0</td>\n",
-       "      <td>97860.0</td>\n",
+       "      <th>1254</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>5</td>\n",
+       "      <td>73212.0</td>\n",
+       "      <td>79368.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>1255</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>6</td>\n",
+       "      <td>90672.0</td>\n",
+       "      <td>96612.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">fe90110788d2</th>\n",
-       "      <th>30</th>\n",
-       "      <td>505116.0</td>\n",
-       "      <td>511284.0</td>\n",
+       "      <th>1256</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>7</td>\n",
+       "      <td>107820.0</td>\n",
+       "      <td>113712.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>522852.0</td>\n",
-       "      <td>529104.0</td>\n",
+       "      <th>1257</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>538956.0</td>\n",
-       "      <td>547152.0</td>\n",
+       "      <th>1258</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>556560.0</td>\n",
-       "      <td>560604.0</td>\n",
+       "      <th>1259</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>574620.0</td>\n",
-       "      <td>581604.0</td>\n",
+       "      <th>1260</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1261</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1262</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1263</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>14</td>\n",
+       "      <td>229224.0</td>\n",
+       "      <td>235152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1264</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>15</td>\n",
+       "      <td>246576.0</td>\n",
+       "      <td>252852.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1265</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>16</td>\n",
+       "      <td>264456.0</td>\n",
+       "      <td>271212.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1266</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>17</td>\n",
+       "      <td>281412.0</td>\n",
+       "      <td>286872.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1267</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>18</td>\n",
+       "      <td>298212.0</td>\n",
+       "      <td>304056.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1268</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>19</td>\n",
+       "      <td>315444.0</td>\n",
+       "      <td>321156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1269</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>20</td>\n",
+       "      <td>332676.0</td>\n",
+       "      <td>338436.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1270</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>21</td>\n",
+       "      <td>350232.0</td>\n",
+       "      <td>355944.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1271</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>22</td>\n",
+       "      <td>367020.0</td>\n",
+       "      <td>373404.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1272</th>\n",
+       "      <td>29d3469bd15d</td>\n",
+       "      <td>23</td>\n",
+       "      <td>384372.0</td>\n",
+       "      <td>390852.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4790 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "event                  onset    wakeup\n",
-       "series_id    night                    \n",
-       "038441c925bb 1        4992.0   10932.0\n",
-       "             2       20244.0   27492.0\n",
-       "             3       39996.0   44400.0\n",
-       "             4       57240.0   62856.0\n",
-       "             6       91296.0   97860.0\n",
-       "...                      ...       ...\n",
-       "fe90110788d2 30     505116.0  511284.0\n",
-       "             31     522852.0  529104.0\n",
-       "             32     538956.0  547152.0\n",
-       "             33     556560.0  560604.0\n",
-       "             34     574620.0  581604.0\n",
-       "\n",
-       "[4790 rows x 2 columns]"
+       "event     series_id  night     onset    wakeup\n",
+       "1250   29d3469bd15d      1    3960.0   10164.0\n",
+       "1251   29d3469bd15d      2   21996.0   27132.0\n",
+       "1252   29d3469bd15d      3       NaN       NaN\n",
+       "1253   29d3469bd15d      4       NaN       NaN\n",
+       "1254   29d3469bd15d      5   73212.0   79368.0\n",
+       "1255   29d3469bd15d      6   90672.0   96612.0\n",
+       "1256   29d3469bd15d      7  107820.0  113712.0\n",
+       "1257   29d3469bd15d      8       NaN       NaN\n",
+       "1258   29d3469bd15d      9       NaN       NaN\n",
+       "1259   29d3469bd15d     10       NaN       NaN\n",
+       "1260   29d3469bd15d     11       NaN       NaN\n",
+       "1261   29d3469bd15d     12       NaN       NaN\n",
+       "1262   29d3469bd15d     13       NaN       NaN\n",
+       "1263   29d3469bd15d     14  229224.0  235152.0\n",
+       "1264   29d3469bd15d     15  246576.0  252852.0\n",
+       "1265   29d3469bd15d     16  264456.0  271212.0\n",
+       "1266   29d3469bd15d     17  281412.0  286872.0\n",
+       "1267   29d3469bd15d     18  298212.0  304056.0\n",
+       "1268   29d3469bd15d     19  315444.0  321156.0\n",
+       "1269   29d3469bd15d     20  332676.0  338436.0\n",
+       "1270   29d3469bd15d     21  350232.0  355944.0\n",
+       "1271   29d3469bd15d     22  367020.0  373404.0\n",
+       "1272   29d3469bd15d     23  384372.0  390852.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
+    "event_df = pd.read_csv(\"../data/child-mind-institute-detect-sleep-states/train_events.csv\")\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import polars as pl\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset\n",
-    "from torchvision.transforms.functional import resize\n",
+    "event_df = (\n",
+    "    event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
+    "    # .dropna()\n",
+    "    .reset_index()\n",
+    ")\n",
     "\n",
-    "from src.conf import InferenceConfig, TrainConfig\n",
-    "from src.utils.common import (gaussian_label, nearest_valid_size,\n",
-    "                              negative_sampling, pad_if_needed, random_crop)\n",
-    "\n",
-    "\n",
-    "###################\n",
-    "# Label\n",
-    "###################\n",
-    "def get_seg_label(\n",
-    "    this_event_df: pd.DataFrame, num_frames: int, duration: int, start: int, end: int\n",
-    ") -> np.ndarray:\n",
-    "    # # (start, end)の範囲と(onset, wakeup)の範囲が重なるものを取得\n",
-    "    this_event_df = this_event_df.query(\"@start <= wakeup & onset <= @end\")\n",
-    "\n",
-    "    label = np.zeros((num_frames, 3))\n",
-    "    # onset, wakeup, sleepのラベルを作成\n",
-    "    for onset, wakeup in this_event_df[[\"onset\", \"wakeup\"]].to_numpy():\n",
-    "        onset = int((onset - start) / duration * num_frames)\n",
-    "        wakeup = int((wakeup - start) / duration * num_frames)\n",
-    "        if onset >= 0 and onset < num_frames:\n",
-    "            label[onset, 1] = 1\n",
-    "        if wakeup < num_frames and wakeup >= 0:\n",
-    "            label[wakeup, 2] = 1\n",
-    "\n",
-    "        onset = max(0, onset)\n",
-    "        wakeup = min(num_frames, wakeup)\n",
-    "        label[onset:wakeup, 0] = 1  # sleep\n",
-    "\n",
-    "    return label\n",
-    "\n",
-    "\n",
-    "class SegTrainDataset(Dataset):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        cfg: TrainConfig,\n",
-    "        features: dict[str, np.ndarray],\n",
-    "        event_df: pl.DataFrame,\n",
-    "    ):\n",
-    "        self.cfg = cfg\n",
-    "        # only positive samples\n",
-    "        self.event_df_pos: pd.DataFrame = (\n",
-    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
-    "            .drop_nulls()\n",
-    "            .to_pandas()\n",
-    "        )\n",
-    "        # all samples\n",
-    "        self.event_df: pd.DataFrame = (\n",
-    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
-    "            .to_pandas()\n",
-    "        )\n",
-    "        self.features = features\n",
-    "        self.num_features = len(cfg.features)\n",
-    "        self.upsampled_num_frames = nearest_valid_size(\n",
-    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
-    "        )\n",
-    "        self.max_steps = {'05e1944c3818': 139992, '13b4d6a01d27': 92484, \n",
-    "                          '7476c0bd18d2': 83988, '5aad18e7ce64': 18216,\n",
-    "                          'aed3850f65f0': 21228, 'c5365a55ebb7': 17772, \n",
-    "                          'f981a0805fd0': 75192}\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.event_df)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        event = np.random.choice([\"onset\", \"wakeup\"], p=[0.5, 0.5])\n",
-    "        pos = self.event_df.at[idx, event]\n",
-    "        \n",
-    "        positive = False if random.random() < self.cfg.dataset.bg_sampling_rate else True\n",
-    "        if positive:\n",
-    "            idx = idx % len(self.event_df_pos)    \n",
-    "            series_id = self.event_df_pos.at[idx, \"series_id\"]\n",
-    "            this_event_df = self.event_df_pos.query(\"series_id == @series_id\").reset_index(drop=True)\n",
-    "        else:\n",
-    "            series_id = self.event_df.at[idx, \"series_id\"]\n",
-    "            this_event_df = self.event_df.query(\"series_id == @series_id\").reset_index(drop=True)\n",
-    "        \n",
-    "        # extract data matching series_id\n",
-    "        this_feature = self.features[series_id]  # (n_steps, num_features)\n",
-    "        n_steps = this_feature.shape[0]\n",
-    "\n",
-    "        # sample background\n",
-    "        if positive:\n",
-    "            max_step = self.max_steps[series_id] if series_id in self.max_steps else 1e9\n",
-    "            pos = negative_sampling(this_event_df, n_steps, max_step, self.cfg.duration)\n",
-    "\n",
-    "        # crop\n",
-    "        if n_steps > self.cfg.duration:\n",
-    "            start, end = random_crop(pos, self.cfg.duration, n_steps)\n",
-    "            feature = this_feature[start:end]\n",
-    "        else:\n",
-    "            start, end = 0, self.cfg.duration\n",
-    "            feature = pad_if_needed(this_feature, self.cfg.duration)\n",
-    "\n",
-    "        # upsample\n",
-    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
-    "        feature = resize(\n",
-    "            feature,\n",
-    "            size=[self.num_features, self.upsampled_num_frames],\n",
-    "            antialias=False,\n",
-    "        ).squeeze(0)\n",
-    "\n",
-    "        # from hard label to gaussian label\n",
-    "        num_frames = self.upsampled_num_frames // self.cfg.downsample_rate\n",
-    "        label = get_seg_label(this_event_df, num_frames, self.cfg.duration, start, end)\n",
-    "        \n",
-    "        # label[:, 0] = add_gaussian_sleep(label[:, 0], offset=self.cfg.dataset.offset)\n",
-    "        label[:, [1, 2]] = gaussian_label(\n",
-    "            label[:, [1, 2]], offset=self.cfg.dataset.offset, sigma=self.cfg.dataset.sigma\n",
-    "        )\n",
-    "        \n",
-    "        return {\n",
-    "            \"series_id\": series_id,\n",
-    "            \"feature\": feature,  # (num_features, upsampled_num_frames)\n",
-    "            \"label\": torch.FloatTensor(label),  # (pred_length, num_classes)\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "class SegValidDataset(Dataset):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        cfg: TrainConfig,\n",
-    "        chunk_features: dict[str, np.ndarray],\n",
-    "        event_df: pl.DataFrame,\n",
-    "    ):\n",
-    "        self.cfg = cfg\n",
-    "        self.chunk_features = chunk_features\n",
-    "        self.keys = list(chunk_features.keys())\n",
-    "        self.event_df = (\n",
-    "            event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
-    "            .drop_nulls()\n",
-    "            .to_pandas()\n",
-    "        )\n",
-    "        self.num_features = len(cfg.features)\n",
-    "        self.upsampled_num_frames = nearest_valid_size(\n",
-    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
-    "        )\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.keys)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        key = self.keys[idx]\n",
-    "        feature = self.chunk_features[key]\n",
-    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
-    "        feature = resize(\n",
-    "            feature,\n",
-    "            size=[self.num_features, self.upsampled_num_frames],\n",
-    "            antialias=False,\n",
-    "        ).squeeze(0)\n",
-    "\n",
-    "        series_id, chunk_id = key.split(\"_\")\n",
-    "        chunk_id = int(chunk_id)\n",
-    "        start = chunk_id * self.cfg.duration\n",
-    "        end = start + self.cfg.duration\n",
-    "        num_frames = self.upsampled_num_frames // self.cfg.downsample_rate\n",
-    "        \n",
-    "        label = get_seg_label(\n",
-    "            self.event_df.query(\"series_id == @series_id\").reset_index(drop=True),\n",
-    "            num_frames,\n",
-    "            self.cfg.duration,\n",
-    "            start,\n",
-    "            end,\n",
-    "        )\n",
-    "        \n",
-    "        return {\n",
-    "            \"key\": key,\n",
-    "            \"feature\": feature,  # (batch_size, num_features, duration)\n",
-    "            \"label\": torch.FloatTensor(label),  # (batch_size, duration // 2, num_classes)\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "class SegTestDataset(Dataset):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        cfg: InferenceConfig,\n",
-    "        chunk_features: dict[str, np.ndarray],\n",
-    "    ):\n",
-    "        self.cfg = cfg\n",
-    "        self.chunk_features = chunk_features\n",
-    "        self.keys = list(chunk_features.keys())\n",
-    "        self.num_features = len(cfg.features)\n",
-    "        self.upsampled_num_frames = nearest_valid_size(\n",
-    "            int(self.cfg.duration * self.cfg.upsample_rate), self.cfg.downsample_rate\n",
-    "        )\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.keys)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        key = self.keys[idx]\n",
-    "        feature = self.chunk_features[key]\n",
-    "        feature = torch.FloatTensor(feature.T).unsqueeze(0)  # (1, num_features, duration)\n",
-    "        feature = resize(\n",
-    "            feature,\n",
-    "            size=[self.num_features, self.upsampled_num_frames],\n",
-    "            antialias=False,\n",
-    "        ).squeeze(0)\n",
-    "        \n",
-    "        return {\n",
-    "            \"key\": key,\n",
-    "            \"feature\": feature,  # (num_features, duration)\n",
-    "        }\n"
+    "event_df[event_df[\"series_id\"] == \"29d3469bd15d\"]"
    ]
   },
   {
@@ -344,7 +248,8 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- check  with fixed sampling \n",
+    "- try ensemble of all folds with cutmix \n",
+    "- check fixed sampling \n",
     "\n",
     "- try with full data\n",
     "- try with 6, 7, 8 folds\n",
